added default layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-title: "Matt Gaidica"
+title: "Hi, I'm Matt."
 description: "Personal site and projects."
 theme: jekyll-theme-dinky
 github_username: mattgaidica
-
-
